# Healthcare-Agent

./: DOCKER_README.md  README.md  docker-compose.yml  docker-start.sh
agents/: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  pyproject.toml  run_agent.sh  services.py  stop_agent.sh  tools.py
agents/data/: data_generator.py  database.db
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.seed  Dockerfile.setup  env.template  next.config.ts  package.json  pnpm-lock.yaml
frontend/drizzle/: 0001_illegal_klaw.sql
frontend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
frontend/scripts/: seed.ts  verify-seed.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/signin/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/chat/: page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/api/health/: route.ts
frontend/src/app/api/health/data/: route.ts
frontend/src/app/api/health/glucose/: route.ts
frontend/src/app/api/health/meals/: route.ts
frontend/src/components/auth/: UserButton.tsx
frontend/src/components/dashboard/: DashboardNav.tsx
frontend/src/components/ui/: health-cards.tsx  tool-call-display.tsx
frontend/src/lib/: auth-client.ts  auth.ts
frontend/src/lib/db/: schema.ts
frontend/src/lib/hooks/: useHealthData.ts
(+2 files in other folders)
