[project]
name = "backend"
version = "0.1.0"
description = "Multi-Agent Healthcare System with PostgreSQL Integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag-ui-protocol>=0.1.9",
    "agno>=2.0.11",
    "asyncpg>=0.29.0",
    "faker>=37.8.0",
    "fastapi[standard]>=0.117.1",
    "google-genai>=1.39.1",
    "numpy>=2.3.3",
    "openai>=1.58.1",
    "pandas>=2.3.2",
    "psycopg>=3.2.3",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.10.3",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
